Add listByRecipient() method in NotificationController
